src/syntax/parse/snapshots/dilaria__syntax__parse__test__comparison__greater_equal.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
BinaryOp(
    BinaryOp {
        span: Span(
            0..0,
        ),
        lhs: Literal(
            Number(
                10.0,
                Span(
                    0..0,
                ),
            ),
        ),
        rhs: Literal(
            Number(
                4.0,
                Span(
                    0..0,
                ),
            ),
        ),
        kind: GreaterEqual,
    },
)
